--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "homepage": "https://www.gmmcal.com.br",
   "repository": "https://github.com/gmmcal/gmmcal.com.br",
   "bugs": {
-    "url" : "https://github.com/gmmcal/gmmcal.com.br/issues",
-    "email" : "bugs@gmmcal.com.br"
+    "url": "https://github.com/gmmcal/gmmcal.com.br/issues",
+    "email": "bugs@gmmcal.com.br"
   },
   "author": {
     "name": "Gustavo Cunha",
-    "email" : "contact@gmmcal.com.br",
-    "url" : "https://www.gmmcal.com.br"
+    "email": "contact@gmmcal.com.br",
+    "url": "https://www.gmmcal.com.br"
   },
   "licenses": [
     {
@@ -23,8 +23,8 @@
   "contributors": [
     {
       "name": "Gustavo Cunha",
-      "email" : "contact@gmmcal.com.br",
-      "url" : "https://www.gmmcal.com.br"
+      "email": "contact@gmmcal.com.br",
+      "url": "https://www.gmmcal.com.br"
     }
   ],
   "keywords": [
@@ -44,39 +44,39 @@
     "heroku",
     "ci-cd"
   ],
-  "engines" : {
-    "node" : ">=10.0.0",
-    "npm" : ">=6.4.0",
-    "yarn" : ">=1.10.0"
+  "engines": {
+    "node": ">=10.0.0",
+    "npm": ">=6.4.0",
+    "yarn": ">=1.10.0"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.2",
-    "@fortawesome/free-brands-svg-icons": "^5.2.0",
-    "@fortawesome/free-regular-svg-icons": "^5.2.0",
-    "@fortawesome/free-solid-svg-icons": "^5.2.0",
-    "@fortawesome/vue-fontawesome": "^0.1.1",
-    "@rails/webpacker": "^3.5",
-    "bootstrap": "^4.1.3",
-    "i18n-js": "^3.0.8",
-    "marked": "^0.5.0",
-    "rails-ujs": "^5.2.1",
-    "sortablejs": "^1.7.0",
-    "turbolinks": "^5.1.1",
-    "vue": "^2.5.16",
+    "@fortawesome/fontawesome-svg-core": "*",
+    "@fortawesome/free-brands-svg-icons": "*",
+    "@fortawesome/free-regular-svg-icons": "*",
+    "@fortawesome/free-solid-svg-icons": "*",
+    "@fortawesome/vue-fontawesome": "*",
+    "@rails/webpacker": "3.5",
+    "bootstrap": "*",
+    "i18n-js": "*",
+    "marked": "*",
+    "rails-ujs": "*",
+    "sortablejs": "*",
+    "turbolinks": "*",
+    "vue": "*",
     "vue-loader": "14.2.2",
-    "vue-template-compiler": "^2.5.16",
-    "vue-turbolinks": "^2.0.3",
-    "yarn": "^1.9.4"
+    "vue-template-compiler": "*",
+    "vue-turbolinks": "*",
+    "yarn": "*"
   },
   "devDependencies": {
     "@vue/test-utils": "^1.0.0-beta.20",
-    "babel-jest": "^23.2.0",
-    "cypress": "^3.1.0",
-    "jest": "^23.2.0",
-    "jest-canvas-mock": "^1.0.3",
-    "jest-serializer-vue": "^2.0.2",
-    "vue-jest": "^2.6.0",
-    "webpack-dev-server": "^2.11.2"
+    "babel-jest": "*",
+    "cypress": "*",
+    "jest": "*",
+    "jest-canvas-mock": "*",
+    "jest-serializer-vue": "*",
+    "vue-jest": "*",
+    "webpack-dev-server": "2.11.2"
   },
   "jest": {
     "verbose": true,
