--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
   "scripts": {
     "test": "jest --watch",
     "test:once": "jest",
-    "cypress": "rake db:setup && cypress open",
+    "cypress": "rake db:setup && DOTFILES_LOADED='false' cypress open",
     "cypress:ci": "cypress run --record"
   }
 }
