Update jest to fix issue with node 11.11.0

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,8 @@ common: &common
 
   install:
     - bundle install
-    - nvm install node -v 11.9.0
-    - npm i -g yarn -v 1.13.0
+    - nvm install node
+    - npm i -g yarn
     - yarn install
 
 tests: &tests
