--- a/.scss-lint.yml
+++ b/.scss-lint.yml
@@ -1,6 +1,8 @@
 exclude: 'app/assets/stylesheets/admin/mdb/**'
 
 linters:
+  Comment:
+    enabled: false
   ColorVariable:
     enabled: false
   NestingDepth:
@@ -9,3 +11,5 @@ linters:
     convention: snake_case
   SelectorDepth:
     max_depth: 5
+  VendorPrefix:
+    excluded_identifiers: ['flex']
