--- a/package.json
+++ b/package.json
@@ -45,9 +45,9 @@
     "ci-cd"
   ],
   "engines": {
-    "node": ">=10.0.0",
-    "npm": ">=6.4.0",
-    "yarn": ">=1.10.0"
+    "node": "^11.11.0",
+    "npm": "^6.7.0",
+    "yarn": "^1.15.2"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "*",
