--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,13 @@
 language: ruby
 
+dist: xenial
+
+services:
+  - postgresql
+
+addons:
+  postgresql: "10"
+
 cache:
   directories:
     - /home/travis/.rvm
