Stabilize travis build

--- a/package.json
+++ b/package.json
@@ -84,6 +84,6 @@
     "test": "jest --watch",
     "test:once": "jest",
     "cypress": "rake db:setup && DOTFILES_LOADED='false' cypress open",
-    "cypress:ci": "cypress run --record"
+    "cypress:ci": "cypress run"
   }
 }
