--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,15 @@ services:
 
 addons:
   postgresql: "10"
+  apt:
+    packages:
+      - xvfb
+      - libgtk2.0-0
+      - libnotify-dev
+      - libgconf-2-4
+      - libnss3
+      - libxss1
+      - libasound2
 
 cache:
   directories:
@@ -67,7 +76,7 @@ jobs:
         - bin/webpack
         - bundle exec rails db:seed
         - bundle exec rails server -p 3000 &
-        - yarn cypress:ci
+        - yarn cypress:ci $CYPRESS_FLAGS
         - kill $(jobs -p) || true
 
     - stage: deploy
