--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "@fortawesome/free-solid-svg-icons": "*",
     "@fortawesome/vue-fontawesome": "*",
     "@fullhuman/postcss-purgecss": "*",
-    "@rails/webpacker": "^4.0.2",
+    "@rails/webpacker": "*",
     "bootstrap": "*",
     "core-js": "3",
     "i18n-js": "*",
@@ -64,7 +64,7 @@
     "rails-ujs": "*",
     "sortablejs": "*",
     "start-server-and-test": "*",
-    "tailwindcss": "^1.0.0-beta.8",
+    "tailwindcss": "*",
     "turbolinks": "*",
     "vue": "*",
     "vue-loader": "*",
