Remove CHANGELOG and update dependencies

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@rails/webpacker": "*",
     "bootstrap": "*",
     "core-js": "3",
+    "dompurify": "*",
     "i18n-js": "*",
     "marked": "*",
     "rails-ujs": "*",
