Update all dependencies

--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
     "cypress": "start-test server:start 3000 cypress:open",
     "server:start": "bundle exec rails server -p 3000",
     "cypress:run": "cypress run $CYPRESS_FLAGS",
-    "cypress:open": "DOTFILES_LOADED='false' cypress open",
+    "cypress:open": "cypress open",
     "cypress:ci": "start-test server:start 3000 cypress:run"
   }
 }
