--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,9 @@ cache:
     - .node_modules
 
 common: &common
+  before_install:
+    - gem update --system --force
+
   before_script:
     - cp config/database.yml.travis config/database.yml
     - cp config/secrets.yml.travis config/secrets.yml
@@ -40,6 +43,7 @@ common: &common
 tests: &tests
   <<: *common
   before_install:
+    - gem update --system --force
     - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
     - chmod +x ./cc-test-reporter
     - ./cc-test-reporter before-build
