--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,9 @@ cache:
     - ~/.cache
     - .node_modules
 
+before_install:
+  - gem update --system --force
+
 common: &common
   before_install:
     - gem update --system --force
