--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "@fullhuman/postcss-purgecss": "*",
     "@rails/webpacker": "*",
     "bootstrap": "*",
-    "core-js": "3",
+    "core-js": "*",
     "dompurify": "*",
     "i18n-js": "*",
     "marked": "*",
@@ -75,8 +75,8 @@
   },
   "devDependencies": {
     "@babel/core": "*",
-    "@vue/test-utils": "^1.0.0-beta.29",
-    "babel-eslint": "^10.0.1",
+    "@vue/test-utils": "^1.0.0-beta.30",
+    "babel-eslint": "*",
     "babel-jest": "*",
     "cypress": "*",
     "jest": "*",
