--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -1,4 +1,5 @@
-name: backend unit tests
+name: Backend unit tests
+
 on:
   - push
   - pull_request
@@ -7,7 +8,27 @@ env:
   RAILS_ENV: test
 
 jobs:
-  backend:
+  setup:
+    name: Setup languages
+
+    steps:
+      - name: Install Node.js 12.x
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12.x
+
+  install:
+    name: Install dependencies
+
+    steps:
+      - name: Install yarn
+        run: npm i -g yarn
+      - name: Check yarn version
+        run: yarn --version
+      - name: Run yarn install
+        run: yarn install
+
+  tests:
     name: Backend Tests
     runs-on: ubuntu-18.04
 
@@ -25,7 +46,7 @@ jobs:
     steps:
       - uses: actions/checkout@v1
 
-      # actions/languages
+      # languages
       - name: Set up Ruby 2.6
         uses: actions/setup-ruby@v1
         with:
@@ -34,68 +55,16 @@ jobs:
       - name: Install PostgreSQL 11 client
         run: sudo apt-get -yqq install libpq-dev
 
-      # - name: Use Node.js 12.x
-      #   uses: actions/setup-node@v1
-      #   with:
-      #     node-version: 12.x
-
-      # actions/dependencies
+      # dependencies
       - name: Install Bundler gem
         run: gem install bundler
-      # - name: Install yarn
-      #   run: npm i -g yarn
       - name: Check ruby version
         run: ruby --version
-      # - name: Check yarn version
-      #   run: yarn --version
       - name: Run bundle install
         run: bundle install --jobs 4 --retry 3
-      # - name: Run yarn install
-      #   run: yarn install
       - name: Setup database
         run: bundle exec rails db:migrate
 
-      # current script
+      # script
       - name: Run tests
         run: bundle exec rspec
-
-  frontend:
-    name: Frontend Tests
-    runs-on: ubuntu-18.04
-
-    steps:
-      - uses: actions/checkout@v1
-
-      # actions/languages
-      # - name: Set up Ruby 2.6
-      #   uses: actions/setup-ruby@v1
-      #   with:
-      #     ruby-version: 2.6.x
-
-      # - name: Install PostgreSQL 11 client
-      #   run: sudo apt-get -yqq install libpq-dev
-
-      - name: Use Node.js 12.x
-        uses: actions/setup-node@v1
-        with:
-          node-version: 12.x
-
-      # actions/dependencies
-      # - name: Install Bundler gem
-      #   run: gem install bundler
-      - name: Install yarn
-        run: npm i -g yarn
-      # - name: Check ruby version
-      #   run: ruby --version
-      - name: Check yarn version
-        run: yarn --version
-      # - name: Run bundle install
-      #   run: bundle install --jobs 4 --retry 3
-      - name: Run yarn install
-        run: yarn install
-      # - name: Setup database
-      #   run: bundle exec rails db:migrate
-
-      # current script
-      - name: Run tests
-        run: yarn test:once
