--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -10,6 +10,7 @@ env:
 jobs:
   setup:
     name: Setup languages
+    runs-on: ubuntu-18.04
 
     steps:
       - name: Install Node.js 12.x
@@ -19,6 +20,7 @@ jobs:
 
   install:
     name: Install dependencies
+    runs-on: ubuntu-18.04
 
     steps:
       - name: Install yarn
@@ -31,6 +33,10 @@ jobs:
   tests:
     name: Backend Tests
     runs-on: ubuntu-18.04
+
+    needs:
+      - setup
+      - install
 
     services:
       postgres:
