--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -22,6 +22,9 @@ jobs:
     name: Install dependencies
     runs-on: ubuntu-18.04
 
+    needs:
+      - setup
+
     steps:
       - name: Install yarn
         run: npm i -g yarn
@@ -35,7 +38,6 @@ jobs:
     runs-on: ubuntu-18.04
 
     needs:
-      - setup
       - install
 
     services:
