CodeClimate tool requires git repo (?)

--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -92,6 +92,8 @@ jobs:
       - frontend
 
     steps:
+      - uses: actions/checkout@v1
+
       - name: Install CodeClimate tool
         run: |
           curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
