--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -35,13 +35,25 @@ jobs:
       - name: Install PostgreSQL 11 client
         run: sudo apt-get -yqq install libpq-dev
 
+      - name: Cache gems
+        uses: actions/cache@v1
+        with:
+          path: vendor/bundle
+          key: ${{ runner.os }}-bundler-${{ hashFiles('**/Gemfile.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-bundler-${{ env.cache-name }}-
+            ${{ runner.os }}-bundler-
+            ${{ runner.os }}-
+
       # dependencies
       - name: Install Bundler gem
         run: gem install bundler
       - name: Check ruby version
         run: ruby --version
       - name: Run bundle install
-        run: bundle install --jobs 4 --retry 3
+        run: |
+          bundle config path vendor/bundle
+          bundle install --jobs 4 --retry 3
       - name: Setup database
         run: bundle exec rails db:migrate
 
@@ -66,6 +78,16 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 12.x
+
+      - name: Cache node modules
+        uses: actions/cache@v1
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-npm-${{ hashFiles('**/yarn-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-npm-${{ env.cache-name }}-
+            ${{ runner.os }}-npm-
+            ${{ runner.os }}-
 
       - name: Install yarn
         run: npm i -g yarn
