--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -35,16 +35,10 @@ jobs:
       - name: Install PostgreSQL 11 client
         run: sudo apt-get -yqq install libpq-dev
 
-      # dependencies
-      - name: Install Bundler gem
-        run: gem install bundler
-      - name: Check ruby version
-        run: ruby --version
-
       - name: Cache gems
         uses: actions/cache@v1
         with:
-          path: vendor/bundler
+          path: vendor/bundle
           key: ${{ runner.os }}-bundler-${{ hashFiles('**/Gemfile.lock') }}
           restore-keys: |
             ${{ runner.os }}-bundler-${{ env.cache-name }}-
@@ -53,10 +47,16 @@ jobs:
 
       - name: Run bundle install
         run: |
-          bundle config path vendor/bundler
-          bundle install --jobs 4 --retry 3
+          bundle config path vendor/bundle
+          bundle install --jobs 4 --retry 3 --deployment
       - name: Setup database
         run: bundle exec rails db:migrate
+
+      # dependencies
+      - name: Install Bundler gem
+        run: gem install bundler
+      - name: Check ruby version
+        run: ruby --version
 
       # script
       - name: Run tests
