--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -27,10 +27,10 @@ jobs:
       - uses: actions/checkout@v1
 
       # languages
-      - name: Set up Ruby 2.6
+      - name: Install Ruby 2.6.5
         uses: actions/setup-ruby@v1
         with:
-          ruby-version: 2.6.x
+          ruby-version: '2.6.5'
 
       - name: Install PostgreSQL 11 client
         run: sudo apt-get -yqq install libpq-dev
@@ -47,12 +47,12 @@ jobs:
       # dependencies
       - name: Install Bundler gem
         run: gem install bundler
-      - name: Check ruby version
-        run: ruby --version
       - name: Run bundle install
         run: |
           bundle config path vendor/bundle
-          bundle install --jobs 4 --retry 3 --deployment
+          bundle config set deployment 'true'
+          bundle config set without production
+          bundle install --jobs 4 --retry 3
       - name: Setup database
         run: bundle exec rails db:migrate
 
@@ -73,15 +73,13 @@ jobs:
     steps:
       - uses: actions/checkout@v1
 
-      - name: Install Node.js 12.x
+      - name: Install Node.js 12.0.0
         uses: actions/setup-node@v1
         with:
-          node-version: 12.x
+          node-version: '12.0.0'
 
       - name: Install yarn
         run: npm i -g yarn
-      - name: Check yarn version
-        run: yarn --version
 
       - name: Get yarn cache
         id: yarn-cache
