--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -27,10 +27,10 @@ jobs:
       - uses: actions/checkout@v1
 
       # languages
-      - name: Install Ruby 2.6.5
+      - name: Install Ruby 2.6.x
         uses: actions/setup-ruby@v1
         with:
-          ruby-version: 2.6.5
+          ruby-version: 2.6.x
 
       - name: Install APT dependencies
         run: sudo apt-get -yqq install libpq-dev
