--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -26,15 +26,15 @@ jobs:
       - uses: actions/checkout@v1
 
       # languages
-      - name: Install Ruby 2.6
+      - name: Install Ruby 2.6.x
         uses: actions/setup-ruby@v1
         with:
-          ruby-version: '2.6.5'
+          ruby-version: 2.6.x
 
-      - name: Install Node.js 12.0.0
+      - name: Install Node.js 12.x
         uses: actions/setup-node@v1
         with:
-          node-version: '12.0.0'
+          node-version: 12.x
 
       - name: Install APT dependencies
         run: sudo apt-get -yqq install libpq-dev
