--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -73,10 +73,10 @@ jobs:
     steps:
       - uses: actions/checkout@v1
 
-      - name: Install Node.js 12.0.0
+      - name: Install Node.js 12.x
         uses: actions/setup-node@v1
         with:
-          node-version: '12.0.0'
+          node-version: 12.x
 
       - name: Install yarn
         run: npm i -g yarn
