--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -3,9 +3,6 @@ name: End-to-end tests
 on:
   - pull_request
 
-env:
-  RAILS_ENV: test
-
 jobs:
   e2e:
     name: Tests
@@ -17,7 +14,7 @@ jobs:
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: gmmcalcombr_test
+          POSTGRES_DB: gmmcalcombr_development
         ports:
           - 5432:5432
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
@@ -54,6 +51,9 @@ jobs:
 
       - name: Setup database
         run: bundle exec rails db:migrate
+
+      - name: Compile assets
+        run: bundle exec rake assets:precompile
 
       - name: Load default DB data
         run: bundle exec rails db:seed
