Rewrite end-to-end tests with cypress-on-rails

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -42,8 +42,12 @@ jobs:
       # dependencies
       - name: Install Bundler gem
         run: gem install bundler
+
       - name: Run bundle install
-        run: bundle install
+        run: |
+          bundle config path vendor/bundle
+          bundle config set without production
+          bundle install --jobs 4 --retry 3
 
       - name: Run yarn install
         run: yarn install
