--- a/package.json
+++ b/package.json
@@ -91,7 +91,11 @@
     "cypress": "start-test server:start 3000 cypress:open",
     "server:start": "bundle exec rails server -p 3000",
     "cypress:run": "cypress run",
+    "cypress:run:admin": "cypress run -s \"spec/frontend/end-to-end/admin/**.js\"",
+    "cypress:run:frontend": "cypress run -s \"spec/frontend/end-to-end/frontend/**.js\"",
     "cypress:open": "cypress open",
-    "cypress:ci": "start-test server:start 3000 cypress:run"
+    "cypress:ci": "start-test server:start 3000 cypress:run",
+    "cypress:ci:admin": "start-test server:start 3000 cypress:run:admin",
+    "cypress:ci:frontend": "start-test server:start 3000 cypress:run:frontend"
   }
 }
